tests/snapshots/integration_test__log_data@7a44fc950fdfbc9b117e05a4b7782db6.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1655465398.534:25618): proctitle=2F62696E2F7368002D656675002F7573722F62696E2F6C64002D706C7567696E002F7573722F6C6962657865632F6763632F616172636836342D616C742D6C696E75782F382F6C69626C746F5F706C7567696E2E736F002D706C7567696E2D6F70743D2F7573722F6C6962657865632F6763632F616172636836342D616C742D"
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1655465398534,
  "id": 25618,
  "fields": {
    "proctitle": "/bin/sh -efu /usr/bin/ld -plugin /usr/libexec/gcc/aarch64-alt-linux/8/liblto_plugin.so -plugin-opt=/usr/libexec/gcc/aarch64-alt-"
  }
}
