tests/snapshots/integration_test__log_data@7cc675d994d63070cc93944ba99368c3.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-sockaddr-unix.log:1"
expression: result
info: "type=SOCKADDR msg=audit(1670486666.214:1232): saddr=01002F746D702F2E7B46443244443844342D463641412D344437342D413645312D4145464142313833444545427D\u001dSADDR={ fam=local path=/tmp/.{FD2DD8D4-F6AA-4D74-A6E1-AEFAB183DEEB} }"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Eof at:  }"
    }
  }
}
