tests/snapshots/integration_test__log_data@7e44ce30443dfabf50f012fd0ae3c962.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-daemon-end.log:1"
expression: result
info: "type=DAEMON_END msg=audit(1640080836.094:7063): op=terminate auid=0 pid=27347 subj= res=success\u001dAUID=\"root\""
---
{
  "Err": {
    "Parse": "error Eof at:  subj= res=success\u001dAUID=\"root\""
  }
}
