tests/snapshots/integration_test__log_data@809e77bf02b4b5ec6bc35408085f703e.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/auparse/test2.log:10"
expression: result
info: "type=USER_START msg=audit(1170021601.344:287): user pid=13015 uid=0 auid=0 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: session open acct=root : exe=\"/usr/sbin/crond\" (hostname=?, addr=?, terminal=cron res=success)'"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  pid=13015 uid=0 auid=0 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: session open acct=root : exe=\"/usr/sbin/crond\" (hostname=?, addr=?, terminal=cron res=success)'"
    }
  }
}
