tests/snapshots/integration_test__log_data@811ebfc0948869e276d0dae181327a3a.snap
---
source: tests/integration_test.rs
expression: record
info: "type=AVC msg=audit(1524662933.080:61207): perm=15"
---
{
  "record_type": "AVC",
  "timestamp": 1524662933080,
  "id": 61207,
  "fields": {
    "perm": [
      "exec",
      "write",
      "read",
      "attr"
    ]
  }
}
